Contact Links added

--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -1,4 +1,15 @@
+/* import './styles/componentStyles.css'; */
+
 .rowC{
     display:flex; 
     flex-direction:row;
+}
+
+.contact-links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 980px;
+    margin-top: 4rem;
+    flex-wrap: wrap;
 }
