--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -44,3 +44,58 @@
 .popcorn{
     box-shadow: inset;
 }
+
+.weather-video{
+    margin:0px 0px 0px 0px;
+    margin-top : -20px;
+    width:100%;
+    /* height: 270px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.301),rgba(0, 0, 0, 0.301)); */
+}
+
+.tabs{
+    color: floralwhite;
+    font-size: large;
+    font-weight: bolder;
+}
+
+/* tabs buttons */
+
+.tab-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2px auto;
+    font-weight: bolder;
+    padding: 5px 15px;
+    color: #f4f4f4;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid rgb(240, 241, 247);
+    position: relative;
+    overflow: hidden;
+}
+  
+.tab-btn:hover {
+    box-shadow: 1px 1px 25px 10px rgba(252, 252, 255, 0.4);
+}
+
+.tab-btn:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(250, 250, 252, 0.4),
+        transparent
+    );
+    transition: all 650ms;
+}
+
+.tab-btn:hover:before {
+    left: 100%;
+}
