--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -49,8 +49,8 @@
     margin:0px 0px 0px 0px;
     margin-top : -20px;
     width:100%;
-    /* height: 270px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.301),rgba(0, 0, 0, 0.301)); */
+    height: 270px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.507),rgba(0, 0, 0, 0.507));
 }
 
 .tabs{
