--- a/src/components/Tabs/tabsStyles.css
+++ b/src/components/Tabs/tabsStyles.css
@@ -3,3 +3,14 @@
     margin-top: 20px;
     color : floralwhite;
 }
+
+.clean-box{
+    /* border: 1px solid white; */
+    border-bottom: 1px solid white;
+}
+
+.clean-box-cap{
+    border: 1px solid white;
+    border-radius: 25px;
+    margin-bottom: 5px;
+}
