--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -47,7 +47,7 @@
 
 .weather-video{
     margin:0px 0px 0px 0px;
-    margin-top : -20px;
+    /* margin-top : -20px; */
     width:100%;
     height: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.507),rgba(0, 0, 0, 0.507));
