--- a/src/components/styles/componentStyles.css
+++ b/src/components/styles/componentStyles.css
@@ -107,9 +107,14 @@
     left: 100%;
 }
 
-.minor-icons{
+.mini-icons{
     width: 30px;
     height: 30px;
+}
+
+.minor-icons{
+    width: 50px;
+    height: 50px;
 }
 
 .major-icons{
